[package]
name = "orehub-node"
description = "OreHub Node is a decentralized mining pool for the Ore cryptocurrency."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
docify = { workspace = true }
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
serde_json = { workspace = true, default-features = true }
sc-cli.workspace = true
sc-cli.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sc-transaction-pool.workspace = true
sc-transaction-pool.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
sc-offchain.workspace = true
sc-offchain.default-features = true
sc-consensus-babe.workspace = true
sc-consensus-babe.default-features = true
sc-consensus-babe-rpc.workspace = true
sc-consensus-babe-rpc.default-features = true
sp-consensus-babe.workspace = true
sp-consensus-babe.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sc-consensus-grandpa.workspace = true
sc-consensus-grandpa.default-features = true
sc-consensus-grandpa-rpc.workspace = true
sc-consensus-grandpa-rpc.default-features = true
sp-consensus-grandpa.workspace = true
sp-consensus-grandpa.default-features = true
sc-consensus-manual-seal.workspace = true
sc-consensus-manual-seal.optional = true
sc-consensus-manual-seal.default-features = true
sc-consensus-slots.workspace = true
sc-consensus-slots.default-features = true
sc-rpc-api.workspace = true
sc-rpc-api.default-features = true
sc-basic-authorship.workspace = true
sc-basic-authorship.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-timestamp.workspace = true
sp-timestamp.default-features = true
sp-keyring.workspace = true
sp-keyring.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-inherents.workspace = true
sp-inherents.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-block-builder.workspace = true
sp-block-builder.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-transaction-storage-proof.workspace = true
sp-transaction-storage-proof.default-features = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc.workspace = true
pallet-transaction-payment-rpc.default-features = true
pallet-im-online.workspace = true
pallet-im-online.default-features = true
substrate-frame-rpc-system.workspace = true
substrate-frame-rpc-system.default-features = true
frame = { features = ["experimental", "runtime"], workspace = true, default-features = true }
frame-benchmarking-cli.workspace = true
frame-benchmarking-cli.default-features = true
frame-metadata-hash-extension.workspace = true
# For Generating Bags
frame-election-provider-support = { workspace = true, default-features = true, optional = true }
pallet-staking = { workspace = true, default-features = true, optional = true }
sp-staking = { workspace = true, default-features = true, optional = true }
chrono = { workspace = true, optional = true }
num-format = { workspace = true, optional = true }

orehub-primitives.workspace = true
orehub-runtime.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true
substrate-build-script-utils.default-features = true

[features]
default = ["std", "testnet"]
std = ["orehub-runtime/std", "orehub-primitives/std"]
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "orehub-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame/try-runtime",
    "sp-runtime/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "orehub-runtime/try-runtime",
]
metadata-hash = ["orehub-runtime/metadata-hash"]
manual-seal = ["sc-consensus-manual-seal"]
testnet = ["orehub-runtime/testnet"]
mainnet = ["orehub-runtime/mainnet"]
generate-bags = [
    "dep:chrono",
    "dep:num-format",
    "dep:sp-staking",
    "dep:pallet-staking",
    "dep:frame-election-provider-support",
]
