[package]
name = "npvdkgrs"
version = "0.1.0"
description = "Non-interactive publicly verifiable distributed key generation and resharing algorithm over BLS12-381"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
sha3.workspace = true
ark-serialize = { workspace = true, default-features = false, features = ["derive"] }
ark-bls12-381 = { workspace = true, default-features = false, features = ["curve"] }
zeroize.workspace = true

thiserror.workspace = true
thiserror.optional = true

[dev-dependencies]
ark-std.workspace = true
ark-std.features = ["std", "getrandom"]

[features]
default = ["std"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std", "ark-bls12-381/std", "sha3/std", "dep:thiserror"]
parallel = ["ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel"]
asm = ["ark-ff/asm", "sha3/asm"]
print-trace = ["ark-std/print-trace"]
getrandom = ["ark-std/getrandom"]
