[package]
name = "orehub-runtime"
description = "OreHub Runtime is a decentralized mining pool for the Ore cryptocurrency."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true }
pallet-balances.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-skip-feeless-payment.workspace = true
sp-genesis-builder.workspace = true
sp-runtime = { features = ["serde"], workspace = true }

# OreHub specific pallets
pallet-orehub = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",

    "frame/std",

    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-skip-feeless-payment/std",

    "sp-genesis-builder/std",
    "sp-runtime/std",
    "substrate-wasm-builder",

    "pallet-orehub/std",
]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-skip-feeless-payment/runtime-benchmarks",
]
try-runtime = [
    "frame/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-skip-feeless-payment/try-runtime",
]
