[package]
name = "orehub-runtime"
description = "OreHub Runtime is a decentralized mining pool for the Ore cryptocurrency."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec.workspace = true
scale-info.workspace = true
static_assertions.workspace = true
serde = { features = ["derive"], workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true }
frame-election-provider-support.workspace = true
frame-metadata-hash-extension.workspace = true
orehub-primitives.workspace = true
pallet-authorship.workspace = true
pallet-aura.workspace = true
pallet-bags-list.workspace = true
pallet-balances.workspace = true
pallet-bounties.workspace = true
pallet-child-bounties.workspace = true
pallet-collective.workspace = true
pallet-democracy.workspace = true
pallet-election-provider-multi-phase.workspace = true
pallet-elections-phragmen.workspace = true
pallet-grandpa.workspace = true
pallet-identity.workspace = true
pallet-im-online.workspace = true
pallet-indices.workspace = true
pallet-multisig.workspace = true
pallet-offences.workspace = true
pallet-preimage.workspace = true
pallet-sudo.workspace = true
pallet-scheduler.workspace = true
pallet-session.workspace = true
pallet-session.features = ["historical"]
pallet-staking.workspace = true
pallet-timestamp.workspace = true
pallet-treasury.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-tx-pause.workspace = true
pallet-utility.workspace = true

sp-genesis-builder.workspace = true
sp-consensus-aura.workspace = true
sp-runtime.workspace = true
sp-staking.workspace = true

# OreHub specific pallets
pallet-orehub.workspace = true

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde/std",

    "frame/std",
    "frame-metadata-hash-extension/std",
    "frame-election-provider-support/std",


    "pallet-aura/std",
    "pallet-bags-list/std",
    "pallet-balances/std",
    "pallet-bounties/std",
    "pallet-child-bounties/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-elections-phragmen/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "pallet-multisig/std",
    "pallet-offences/std",
    "pallet-preimage/std",
    "pallet-sudo/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-treasury/std",
    "pallet-timestamp/std",
    "pallet-authorship/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-tx-pause/std",
    "pallet-utility/std",

    "sp-genesis-builder/std",
    "sp-consensus-aura/std",
    "sp-runtime/std",
    "sp-staking/std",
    "substrate-wasm-builder",

    "orehub-primitives/std",
    "pallet-orehub/std",
]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "frame-election-provider-support/runtime-benchmarks",
    "pallet-bags-list/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
    "pallet-child-bounties/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-democracy/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "pallet-elections-phragmen/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-indices/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-offences/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-tx-pause/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
]
try-runtime = [
    "frame/try-runtime",
    "frame-election-provider-support/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-bags-list/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-child-bounties/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-elections-phragmen/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-indices/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-tx-pause/try-runtime",
    "pallet-utility/try-runtime",
]
metadata-hash = ["substrate-wasm-builder/metadata-hash"]
mainnet = []
testnet = []
fast-runtime = ["orehub-primitives/fast-runtime"]
